--- a/index.html
+++ b/index.html
@@ -3,7 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Abhishek Tiwari - Portfolio</title>
+    
+    <!-- SEO Meta Tags -->
+    <title>Abhishek Tiwari - Backend-leaning Full-Stack Software Engineer</title>
+    <meta name="description" content="Professional portfolio for Abhishek 'Abhi' Tiwari, a backend-leaning full-stack software engineer specializing in Golang, Java, Spring Boot, and cloud technologies." />
+    <meta name="keywords" content="Abhishek Tiwari, Abhi Tiwari, Full-Stack Engineer, Backend Engineer, Golang, Java, Spring Boot, React, Portfolio, Software Engineer" />
+    <meta name="author" content="Abhishek 'Abhi' Tiwari" />
+    <link rel="canonical" href="https://abhi9720.netlify.app/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://abhi9720.netlify.app/" />
+    <meta property="og:title" content="Abhishek Tiwari - Backend-leaning Full-Stack Software Engineer" />
+    <meta property="og:description" content="Explore the portfolio of Abhishek Tiwari, showcasing projects in backend development, AI, and full-stack engineering." />
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/68281476?v=4" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://abhi9720.netlify.app/" />
+    <meta property="twitter:title" content="Abhishek Tiwari - Backend-leaning Full-Stack Software Engineer" />
+    <meta property="twitter:description" content="Explore the portfolio of Abhishek Tiwari, showcasing projects in backend development, AI, and full-stack engineering." />
+    <meta property="twitter:image" content="https://avatars.githubusercontent.com/u/68281476?v=4" />
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,24 +56,25 @@
       .github-calendar-container {
         padding-bottom: 0.75rem; /* Space for scrollbar */
       }
-      .github-calendar-container::-webkit-scrollbar {
+      .github-calendar-container::-webkit-scrollbar, .chat-scrollbar::-webkit-scrollbar {
         height: 6px;
+        width: 6px;
       }
-      .github-calendar-container::-webkit-scrollbar-track {
+      .github-calendar-container::-webkit-scrollbar-track, .chat-scrollbar::-webkit-scrollbar-track {
         background: transparent;
       }
-      .github-calendar-container::-webkit-scrollbar-thumb {
+      .github-calendar-container::-webkit-scrollbar-thumb, .chat-scrollbar::-webkit-scrollbar-thumb {
         background-color: #e2e8f0; /* slate-200 */
         border-radius: 3px;
       }
-      .github-calendar-container::-webkit-scrollbar-thumb:hover {
+      .github-calendar-container::-webkit-scrollbar-thumb:hover, .chat-scrollbar::-webkit-scrollbar-thumb:hover {
         background-color: #cbd5e1; /* slate-300 */
       }
-      html.dark .github-calendar-container::-webkit-scrollbar-thumb {
-        background-color: #334155; /* slate-700 */
-      }
-      html.dark .github-calendar-container::-webkit-scrollbar-thumb:hover {
+      html.dark .github-calendar-container::-webkit-scrollbar-thumb, html.dark .chat-scrollbar::-webkit-scrollbar-thumb {
         background-color: #475569; /* slate-600 */
+      }
+      html.dark .github-calendar-container::-webkit-scrollbar-thumb:hover, html.dark .chat-scrollbar::-webkit-scrollbar-thumb:hover {
+        background-color: #334155; /* slate-700 */
       }
     </style>
     <script>
@@ -85,6 +107,7 @@
               },
                'fuchsia': {
                 400: '#c026d3',
+                500: '#a21caf',
               },
               'blue': {
                  300: '#93c5fd',
@@ -103,6 +126,8 @@
               spotlight: "spotlight 2s ease .75s 1 forwards",
               spin: 'spin 1s linear infinite',
               shine: 'shine 1.2s ease-out',
+              'fade-in-up': 'fade-in-up 0.5s ease-out forwards',
+              'bounce-dot': 'bounce-dot 1.4s infinite ease-in-out both',
             },
             keyframes: {
               spotlight: {
@@ -119,6 +144,14 @@
                 'from': { transform: 'translateX(-100%) skewX(-15deg)' },
                 'to': { transform: 'translateX(125%) skewX(-15deg)' },
               },
+              'fade-in-up': {
+                '0%': { opacity: '0', transform: 'translateY(10px) scale(0.98)' },
+                '100%': { opacity: '1', transform: 'translateY(0) scale(1)' },
+              },
+              'bounce-dot': {
+                '0%, 80%, 100%': { transform: 'scale(0)' },
+                '40%': { transform: 'scale(1.0)' },
+              },
             },
           }
         }
@@ -133,7 +166,9 @@
     "@google/genai": "https://esm.sh/@google/genai",
     "react-github-calendar": "https://esm.sh/react-github-calendar@^4.1.5",
     "jspdf": "https://esm.sh/jspdf@2.5.1",
-    "html2canvas": "https://esm.sh/html2canvas@1.4.1"
+    "html2canvas": "https://esm.sh/html2canvas@1.4.1",
+    "react-router-dom": "https://esm.sh/react-router-dom@^6.24.1",
+    "react-icons/": "https://esm.sh/react-icons@5.2.1/"
   }
 }
 </script>
